unpackaged/main/default/objects/ServiceTerritoryMember/fields/X1000_KM__c.field-meta.xml
<CustomField>
    <fullName>X1000_KM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1000 KM</label>
    <type>Checkbox</type>
</CustomField>