unpackaged/main/default/objects/ServiceTerritoryMember/fields/X100_KM__c.field-meta.xml
<CustomField>
    <fullName>X100_KM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>100 KM</label>
    <type>Checkbox</type>
</CustomField>