unpackaged/main/default/objects/ServiceTerritoryMember/fields/X125_KM__c.field-meta.xml
<CustomField>
    <fullName>X125_KM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>125 KM</label>
    <type>Checkbox</type>
</CustomField>