unpackaged/main/default/objects/ServiceTerritoryMember/fields/X375__c.field-meta.xml
<CustomField>
    <fullName>X375__c</fullName>
    <defaultValue>false</defaultValue>
    <label>375 KM</label>
    <type>Checkbox</type>
</CustomField>