unpackaged/main/default/objects/ServiceTerritoryMember/fields/X50__c.field-meta.xml
<CustomField>
    <fullName>X50__c</fullName>
    <defaultValue>false</defaultValue>
    <label>50 KM</label>
    <type>Checkbox</type>
</CustomField>