unpackaged/main/default/objects/ServiceTerritoryMember/fields/X600__c.field-meta.xml
<CustomField>
    <fullName>X600__c</fullName>
    <defaultValue>false</defaultValue>
    <label>600 KM</label>
    <type>Checkbox</type>
</CustomField>